--- a/CSS/cores.html
+++ b/CSS/cores.html
@@ -11,6 +11,24 @@
             https://coolors.co/
             http://paletton.com/
         */
+
+        /* Paleta de Cores: vai do 0 ao 9 e as letras do A até o F.
+           RGB vai de 0 a 255.
+        */
+
+        body {
+            background-color: green;
+            background-color: #f3a2c1;
+            background-color: #abc;
+            background-color: #ee992288;
+            background-color: #e928;
+            background-color: rgb(55, 110, 220);
+            background-color: rgba(55, 110, 200, 0.3);
+
+            /* hue, saturation and lightness */
+            background-color: hsl(299, 58%, 50%);
+            background-color: hsla(180, 40%, 50%, 0.8);
+        }
     </style>
 </head>
 
