--- a/CSS/float.html
+++ b/CSS/float.html
@@ -17,14 +17,17 @@
         .c2 {
             background-color: green;
             clear: right;
+            float: left;
         }
         
         .c3 {
             background-color: blue;
+            clear: both;
         }
 
         .c4 {
             background-color: orange;
+            float: right;
         }
 
         div {
