--- a/CSS/texto.html
+++ b/CSS/texto.html
@@ -16,6 +16,56 @@
             flex-direction: column;
             align-items: center;
         }
+
+        p {
+            /* Valores padrões */
+            font-size: 1em;
+            font-size: 100%;
+            font-size: 16px;
+            font-size: 12pt;
+
+            /* Unidades absolutas */
+            font-size: 100px; /* Tamanho do pixel é relativo */
+            font-size: 72pt; /* Pontos. 72pt é equivalente a 1 polegada */
+            font-size: 1in; /* Polegada */
+
+            /* Unidades relativas */
+            font-size: 2.2em;
+            font-size: 2.2rem;
+            font-size: 50vh;
+            font-size: 10vw;
+
+            font-family: monospace;
+            font-family: Georgia, serif;
+            font-family: Verdana, sans-serif;
+            font-family: 'Indie Flowerr', cursive;
+            
+            font-weight: 100;
+            font-weight: italic;
+            text-transform: uppercase;
+            /* text-decoration:  overline underline line-through; */
+            word-spacing: 10px;
+            letter-spacing: 20px;
+            line-height: 2.5em;
+        }
+
+        .botao {
+            font-size: 28px;
+            text-decoration: none;
+            padding: 10px 30px;
+            border-radius: 25px;
+
+        }
+
+        .destaque {
+            color: #ffff;
+            background-color:blue;
+            box-shadow: 2px 2px 1px 1px #000;
+        }
+
+        .destaque:active {
+            box-shadow: none;
+        }
     </style>
 </head>
 
