--- a/CSS/unidades2.html
+++ b/CSS/unidades2.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8">
     <title>Unidades #02</title>
     <style>
-        /* ... */
+        .fora {
+            position: relative;
+            background-color: orange;
+            height: 400px;
+            width: 400px;
+            padding: 50px;
+        }
+
+        .dentro {
+            background-color: aqua;
+            height: 100px;
+            width: 100%;
+            position: static; /* Conteudo (width) */
+            position: relative; /* Conteudo (width) */
+            position: absolute; /* Conteudo - width padding */
+            /* position: fixed; Usa o tamanho do view port e não da div pai */
+        }
+
+
     </style>
 </head>
 <body>
