--- a/CSS/desafioCard.html
+++ b/CSS/desafioCard.html
@@ -5,7 +5,52 @@
     <meta charset="UTF-8">
     <title>Desafio Card</title>
     <style>
-        /* ... */
+        .curso {
+            display: inline-block;
+            /* Também podemos utilizar a prop float: left; ao invés da display */ 
+            box-shadow: 0 4px 8px 0px rgba(0,0,0,0.3);
+            font-family: Verdana, sans-serif;
+            border: solid 1px #CCC;
+            vertical-align: top;
+            margin: 5px 20px;
+            padding: 5px;
+            height: 300px;
+            width: 260px;
+        }
+        
+        .curso img {
+            width: 100%;
+            max-height: 50%;
+        }
+
+        .curso-info {
+            padding: 10px;
+            height: 90px;
+            overflow: hidden;
+        }
+
+        .curso-info h4 {
+            font-size: 1.4em;
+            font-weight: 100;
+            margin: 0px;
+        }
+
+        .curso-preco {
+            float: right;
+        }
+
+        .preco-de {
+            font-size: 1.1em;
+            text-decoration: line-through;
+            font-weight: 100;
+            color: rgb(156, 12, 12);
+        }
+
+        .preco-por {
+            font-size: 1.5em;
+            font-weight: bold;
+            color: rgb(37, 122, 25);
+        }
     </style>
 </head>
 
