FlexBox CSS Exercises

--- a/CSS/flexboxMenu.html
+++ b/CSS/flexboxMenu.html
@@ -51,9 +51,10 @@
             background: #f50a31;
             color: #fff;
         }
-        /* ==================== */
-        /* Solução com Flex Box */
-        /* ==================== */
+
+        .cabecalho {
+            justify-content: flex-end;
+        }
     </style>
 </head>
 
