--- a/CSS/flexbox1.html
+++ b/CSS/flexbox1.html
@@ -6,7 +6,53 @@
     <title>Flexbox #01</title>
     <link rel="stylesheet" href="css/tag.css">
     <style>
-        /* ... */
+        div {
+            border: solid 5px dodgerblue;
+            font-size: 40px;
+            margin: 5px;
+        }
+
+        .big {
+            font-size: 1.5em;
+        }
+
+        .flex-container {
+            display: flex; /* Organiza os elementos em linha */
+            flex-direction: column; /* Organiza os elementos em coluna */
+            flex-direction: column-reverse;
+            flex-direction: row-reverse;
+            flex-direction: row;
+            width: 30%;
+            
+            flex-wrap: wrap; /* Quebra de linha caso aconteça um overflow */
+            flex-wrap: wrap-reverse;
+            flex-flow: row wrap;
+            height: 200px;
+            flex-flow: column-reverse wrap;
+            flex-flow: row wrap;
+
+            /* Main Access */
+            justify-content: flex-start;
+            justify-content: flex-end;
+            justify-content: center;
+            justify-content: space-around;
+            justify-content: space-between;
+
+            /* Cross Axis */
+            height: 400px;
+            align-items: stretch; /* Padrão */
+            align-items: baseline;
+            align-items: start;
+            align-items: flex-end;
+            align-items: center;
+            
+            /* Alinhar mais de uma linha */
+            align-content: flex-start;
+            align-content: flex-end;
+            align-content: center;
+            align-content: space-around;
+            align-content: space-between;
+        }
     </style>
 </head>
 
