--- a/CSS/flexbox2.html
+++ b/CSS/flexbox2.html
@@ -6,16 +6,60 @@
     <title>Flexbox #02</title>
     <link rel="stylesheet" href="css/tag.css">
     <style>
-        /* ... */
+       div {
+            border: solid 5px dodgerblue;
+            font-size: 40px;
+       }
+
+        .flex-container div {
+            box-sizing: border-box; /* O tamanho da caixa também considera a borda */
+       }
+
+        .flex-container {
+            display: flex;
+            height: 300px;
+            width: 600px;
+        }
+
+        .flex-container div:nth-child(3) {
+            background-color: indianred;
+            /* Ordem de exibição do flex-box por prioridade */
+            order: 1; /*  Menos prioridade */
+            order: 0; /* Prioridade padrão (definida do HTML) */
+            order: -1; /* Maior prioridade */
+            align-self: center;
+            align-self: flex-end;
+            align-self: flex-start;
+            align-self: stretch;
+        }
+
+        .flex-container div {
+            width: 100px;
+            flex-grow: 0;
+            flex-grow: 1;
+        }
+
+        .flex-container div:nth-child(1) {
+            flex-grow: 2;
+        }
+
+        .flex-container {
+            width: 300px;
+            flex-shrink: 1; /* Encolher. O espaço que falta é distribuido em cima do peso que você colocar na prop flex-shrink. */
+        }
+        
+        .flex-container div:nth-child(1) {
+            flex-shrink: 5;
+        }
     </style>
 </head>
 
 <body>
-    <div class="flex-container tag nolabel">
-        <div class="tag nolabel">1</div>
-        <div class="tag nolabel">2</div>
-        <div class="tag nolabel">3</div>
-        <div class="tag nolabel">4</div>
+    <div class="flex-container">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
     </div>
     <script src="js/tag.js"></script>
 </body>
