--- a/dom/dom/acessandoAtributos1.html
+++ b/dom/dom/acessandoAtributos1.html
@@ -15,8 +15,28 @@
         <img src='http://files.cod3r.com.br/curso-web/logo-estreita.png' alt='logo'>
     </div>
     <script>
-        // ...
-    </script>
+        const img = document.querySelector('img')
+        console.log('getAtrribute', img.getAttribute('src'))
+        console.log('src', img.src)
+        console.log('["src"]', img.alt)
+        console.log('alt', img.alt)
+
+        console.log('ELEMENTO IMG......')
+        console.log('NodeType', img.nodeType)
+        console.log('NodeName', img.nodeName)
+
+        const src = img.getAttributeNode('src')
+        console.log('ATRIBUTO SRC.....')
+        console.log('NodeType', src.nodeType)
+        console.log('NodeName', src.nodeName)
+        console.log('NodeValue', src.nodeValue)
+
+        const link = document.querySelector('a')
+        console.log('ELEMENTO A.....')
+        console.log('href', link.href)
+        console.log('firstChild.nodeType', link.firstChild.nodeType)
+        link.firstChild.nodeValue = 'New Text'
+</script>
 </body>
 
 </html>
