--- a/dom/dom/acessandoAtributos2.html
+++ b/dom/dom/acessandoAtributos2.html
@@ -10,14 +10,32 @@
 <body class='conteudo exercicio'>
     <div>
         <label for="compras">Compras</label>
-        <ul id="compras" destino='escritório' data-urgencia="5">
+        <ul id="compras" destino='escritorio' data-urgencia="5">
             <li>Café</li>
             <li>Água</li>
             <li>Copo Descartável</li>
         </ul>
     </div>
     <script>
-        // ...
+        const list = document.querySelector('div ul[destino="escritorio"]')
+        console.log('ELEMENTO UL.....')
+        console.log('childNodes', list.childNodes)
+        console.log('destino', list.destino) // undefined
+        console.log('gettAttribute', list.getAttribute('destino'))
+        console.log('hasAttribute', list.hasAttribute('destino'))
+        
+        list.setAttribute('destino', 'empresa') // alterar valor
+        list.setAttribute('status', 'aberto') // adicionar atributo
+        list.removeAttribute('destino')
+        console.log(list.dataset.urgencia)
+        list.dataset.urgencia = 4
+        console.log(list.getAttribute('data-urgencia'))
+
+        //Cuidado
+        const label = document.querySelector('label')
+        console.log(label.for) // undefined
+        console.log(label.htmlFor)
+        console.log(label.getAttribute('for'))
     </script>
 </body>
 
