--- a/dom/dom/trabalhandoComEventos2.html
+++ b/dom/dom/trabalhandoComEventos2.html
@@ -9,17 +9,20 @@
 
 <body class="conteudo exercicio">
     <div>Elemento</div>
+
     <script>
         const item = document.querySelector('div')
-        item,style.position = 'absolute'
+        item.style.position = 'absolute'
 
-        item.onmousemove = e => {
-            const item = e.target
+        item.onmousemove = event => {
+            const item = event.target
             item.style.cursor = 'move'
             
-            if (e.buttons) {
-                item.style.top = `${e.clientY - (item.clientHeight / 2)}`
+            if (event.buttons) {                // event.buttons != 0 (se alguém clicar)
+                item.style.top = `${event.clientY - (item.clientHeight / 2)}px`
+                item.style.left = `${event.clientX - (item.clientWidth / 2)}px`
             }
         }
     </script>
+    
 </body>
