--- a/dom/dom/flappy.html
+++ b/dom/dom/flappy.html
@@ -10,8 +10,23 @@
 
 <body class="conteudo">
     <h1>Flappy Bird</h1>
-    <div wm-flappy></div>
+    <div flappy>
+        <!-- <img class="bird" src="./imgs/passaro.png" alt="passaro">
+        <div class="par-barreiras">
+            <div class="barreira">
+                <div class="corpo"></div>
+                <div class="borda"></div>
+            </div>
+            <div class="barreira">
+                <div class="borda"></div>
+                <div class="corpo"></div>
+            </div>
+        </div>
+        <div class="progresso">100</div> -->   
+    </div>
+
     <script src="js/flappy.js"></script>
+
 </body>
 
 </html>
