--- a/dom/dom/trabalhandoComEventos4.html
+++ b/dom/dom/trabalhandoComEventos4.html
@@ -30,7 +30,46 @@
             </select>
         <button wm-submit>Pesquisar</button>
     </form>
+
     <script>
-        // ...
+
+        // Interceptando evento de submit de um formulário.
+        // Ex 1: Evento onlick do botão.
+
+        const submit = document.querySelector('[wm-submit]')
+        submit.onclick = function(event) {
+            event.preventDefault()
+
+            const form = event.target.parentNode
+            const formData = new FormData(form)
+
+            formData.append('ajax', true)
+            console.log(formData.get('q'))
+            console.log(formData.has('hl'))
+
+            for (let data of formData) {
+                console.log(data)
+            }
+        }
+
+
+        // Ex 2: Evento submit do formulário.
+
+        // const form = document.forms[0]
+        // form.onsubmit = function(event) {
+        //     event.preventDefault()
+
+        //     const form = event.target
+        //     const formData = new FormData(form)
+
+        //     formData.append('ajax', true)
+        //     console.log(formData.get('q'))
+        //     console.log(formData.has('hl'))
+
+        //     for (let data of formData) {
+        //         console.log(data)
+        //     }
+        // }
+
     </script>
 </body>
