Flappy Bird Project - DOM.

--- a/dom/dom/flappy.html
+++ b/dom/dom/flappy.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="conteudo">
-    <h1>Flappy Bird</h1>
+    <h1>Flappy Bird Project Game (DOM) - HTML CSS JS</h1>
     <div flappy>
         <!-- <img class="bird" src="./imgs/passaro.png" alt="passaro">
         <div class="par-barreiras">
