--- a/Ajax/xmlHttpRequest2.html
+++ b/Ajax/xmlHttpRequest2.html
@@ -42,7 +42,7 @@
         document.querySelector('input[type=file]').onchange = e => {
             const formData = new FormData()
             const inputFile = e.target
-            formData.append(inputFile.name, e.target.files[0])
+            formData.append(inputFile.name, inputFile.files[0])
 
             ajaxUpload({
                 url: "upload",
@@ -52,7 +52,6 @@
                     progresso.innerHTML = JSON.stringify(dados)
                 }
             })
-
         }
     </script>
 </body>
