--- a/Ajax/fetch1.html
+++ b/Ajax/fetch1.html
@@ -11,6 +11,15 @@
     <h1>Estados</h1>
 
     <script>
-        // ...
+        const url = 'dados/estados.json'
+        
+        fetch(url)
+            .then(resp => resp.json())
+            .then(estados => {
+                const items = estados.reduce(
+                    (html, estado) => html + `<li>${estado.nome}</li>`,''
+                )
+                document.body.insertAdjacentHTML('beforeend', `<ul>${items}</ul>`)
+            })
     </script>
 </body>
