--- a/Ajax/fetch2.html
+++ b/Ajax/fetch2.html
@@ -21,14 +21,40 @@
 </head>
 
 <body class="conteudo exercicio">
+
     <h1>Formulário Via Fetch</h1>
+
     <form name="usuarioForm" action="formulario" method="post">
         <input type="text" name="nome" placeholder="Nome..." />
         <input type="text" name="sobrenome" placeholder="Sobrenome..." />
         <button>Salvar</button>
     </form>
+
     <div id="resultado"></div>
+
     <script>
-        // ...
+        document.usuarioForm.onsubmit = async e => {
+            e.preventDefault()
+
+            const form = e.target
+            const data = new FormData(form)
+            data.append('ajax', true)
+
+            const options = {
+                method: form.method,
+                body: new URLSearchParams(data)
+            }
+
+            fetch(form.action, options)
+                .then(resp => resp.json())
+                .then(json => {
+                    const resultado = document.getElementById('resultado')
+                    resultado.innerHTML = JSON.stringify(json)
+                })
+                .catch(e => {
+                    resultado.innerHTML = e
+                })
+        }
     </script>
+
 </body>
