--- a/Ajax/axios2.html
+++ b/Ajax/axios2.html
@@ -14,6 +14,25 @@
     <div id="post"></div>
 
     <script>
-        // ...
+        function exibirResultado(id, dados) {
+            const texto = JSON.stringify(dados)
+            document.getElementById(id).innerHTML = texto
+        }
+        
+        // Ex1
+        // axios('parOuImpar?numero=15').then(resp => exibirResultado('get', resp.data))
+
+        // Ex2
+        axios.get('parOuImpar', {
+            params: {
+                numero: 8
+            }
+        }).then(resp => exibirResultado('get', resp.data))
+
+        axios.post('formulario', {
+            nome: 'Alisson',
+            sobrenome: 'Silva'
+        }).then(resp => exibirResultado('post', resp.data))
+
     </script>
 </body>
