--- a/Ajax/jqueryAjax.html
+++ b/Ajax/jqueryAjax.html
@@ -14,6 +14,38 @@
     <div id="post"></div>
 
     <script>
-        // ...
+        function exibirResultado(id, dados) {
+            const texto = JSON.stringify(dados)
+            document.getElementById(id).innerHTML = texto
+        }
+        
+        $.ajax({
+            url: 'parOuImpar',
+            data: {
+                numero: 9
+            },
+            success(data) {
+                exibirResultado('get', data)
+            },
+            error(e) {
+                exibirResultado('get', e)
+            }
+        })
+
+        $.ajax({
+            url: 'formulario',
+            method: 'post',
+            data: {
+                nome: 'Joao',
+                sobrenome: 'Silva'
+            },
+            success(data) {
+                exibirResultado('post', data)
+            },
+            error(e){
+                exibirResultado('post', e)
+            }
+        })
+
     </script>
 </body>
